<resources>
    <string name="app_name">p13</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Головна</string>
    <string name="menu_general">Загальні рекомендації</string>
    <string name="menu_about">Про нас</string>
    <string name="menu_detailed">Детальна інформація</string>
    <string name="very_low_title">Ледь відчутний</string>
    <string name="weak_title">Слабкий</string>
    <string name="medium_title">Середній</string>
    <string name="strong_title">Сильний</string>
    <string name="very_strong_title">Дуже cильний</string>

    <string name="location_example">10 км на Пн-Сх від Токіо</string>
    <string name="date_example">22 дні тому</string>
    <string name="intense">Інтенсивність</string>
    <string name="value">Величина</string>
    <string name="intense_example">Сильний</string>
    <string name="value_example">4.5</string>
    <string name="about_us">ПРО НАС</string>
    <string name="recommendation_head">ПЕРВИННІ РЕКОМЕНДАЦІЇ</string>
    <string name="recommendation_photo">recondation photo</string>
    <string name="icon_photo">icon photo</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_maps2">MapsActivity2</string>
</resources>