<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.savelievoleksandr.p13.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_detailed"
            app:destination="@id/nav_detailed" />
    </fragment>

    <fragment
        android:id="@+id/nav_general"
        android:name="com.savelievoleksandr.p13.ui.general.GeneralFragment"
        android:label="@string/menu_general"
        tools:layout="@layout/fragment_general" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.savelievoleksandr.p13.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_detailed"
        android:name="com.savelievoleksandr.p13.ui.detailed.DetailedFragment"
        android:label="@string/menu_detailed"
        tools:layout="@layout/fragment_detailed" />
</navigation>